pgAdmin/pgAdmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-postgresadmin
spec:
  selector:
    app: counter-postgresadmin
  ports:
  - port: 80
    targetPort: 80
