pgAdmin/pgAdmin-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-postgresadmin
  labels:
    name: counter-postgresadmin
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: counter-postgresadmin
            port: 
              number: 8081
